=================
 Version 47.0
=================
- build fix

=================
 Version 47.beta
=================
- default: adjusted optics
- lcd,lcd-rainbow: nostalgia pixels
- map: geometric vectors
- pills: shading improvements
- sheet: curvy curtain
- swoosh: classic gradients
- symbolic-soup: noisier than usual

=================
 Version 46.0
=================
 Version 46.alpha
=================
- default: less lens distortion
- symbolics: updated icons & tweaks to the layout
- glass chip: improved compression

=================
 Version 46.alpha
=================
- New default. Embrace the rounded triangle!
- Updated Amber, Pills
- New additions -- Gometrics, Glass chip, Neogeo, Ring and Tarka
- Departures -- Keys, Truchet, Rounded Rectangles
- JPEG XL favored as a format, with banding-bustin' client side grain

================
 Version 45.0
================
 Version 45.beta
================
- revert to JPEGs
- blue default (light)

================
 Version 45.beta
================
- new default
- morphogenesis (reactive diffusion)
- pipes
- updated pixels & truchet

================
 Version 44.0
================
 Version 44.beta
================
- new supplemental and default wallpapers

================
   Version 43
================
 Version 43.0
================
 Version 43.rc
================
- minor janitory
================
 Version 43.beta
================
- all new 43 set of default and supplemental wallpapers
- SVG and WebM formats for better compression and resolution
- 4k square format targeting both widescreen, 4:3 and portrait 
  displays.

==============
 Version 42.0
==============
- split xml files per background for easier cherry-picking by distros
- clean up credentials

=================
 Version 42.beta
=================
- new default & supplemental wallpapers in light and dark variants
- updated guidelines

=================
 Version 41.0
=================
- new default & supplemental updates

=================
 Version 40.rc