@@ -1,5 +1,5 @@
 project('gnome-backgrounds',
-  version: '47.0',
+  version: '48.alpha',
   meson_version: '>= 0.50.0'
 )
 
