@@ -1,4 +1,9 @@
 =================
+ Version 48.alpha
+=================
+- new default wallpaper
+
+=================
  Version 47.0
 =================
 - build fix
